fix: App initialization